V2048: Pulizia e correzioni codice

--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Details/D018.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Details/D018.xaml
@@ -4,11 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
-						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
+			 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D018" 
+             x:Class="Prevu.Synoptics.D018" 
              mc:Ignorable="d" 
-             
              d:Background="{DynamicResource MaterialDesignPaper}" >
     <Canvas Height="174" Width="336">
         <Labels:Pipe Width="74" StatusComponent="018-21-CV1" RenderTransformOrigin="0.5,0.5" Color="Oil" Canvas.Left="98" Canvas.Top="111" HorizontalAlignment="Center" VerticalAlignment="Top">
@@ -71,9 +70,7 @@
                 </TransformGroup>
             </Rectangle.RenderTransform>
         </Rectangle>
-        <Labels:DeviceLabel 
-            ComponentName="018-21-CV1" Canvas.Left="17" Canvas.Top="35" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="018-21-CV2" Height="50" Canvas.Left="229" Canvas.Top="35" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="018-21-CV1" Canvas.Left="17" Canvas.Top="35" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="018-21-CV2" Height="50" Canvas.Left="229" Canvas.Top="35" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
