--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P330.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P330.xaml
@@ -7,12 +7,10 @@
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              xmlns:lex="http://wpflocalizeextension.codeplex.com" 
              xmlns:Misc="clr-namespace:Prevu.Drawings.Machines.Misc;assembly=Prevu.Drawings" 
-             xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" xmlns:Silos="clr-namespace:Prevu.Drawings.Machines.Silos;assembly=Prevu.Drawings" 
-             xmlns:Blowers="clr-namespace:Prevu.Drawings.Machines.Blowers;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P330" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="234" StatusComponent="320-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="184" Canvas.Top="544" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
+        <Labels:Pipe Width="234" StatusComponent="320-01-MA1" PipeHeight="Medium" Canvas.Left="184" Canvas.Top="544" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -22,10 +20,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="129" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="21" Canvas.Left="848" Canvas.Top="143" VisibilityComponent="" VisibilitySignal="" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="DirectionOne"/>
-
-
-        <Labels:Pipe Width="164" StatusComponent="292-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="163" Canvas.Top="162" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" >
+        <Labels:Pipe Width="129" StatusComponent="324-01-MA1" PipeHeight="Medium" Canvas.Left="848" Canvas.Top="148" VisibilityComponent="" VisibilitySignal="" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="DirectionOne"/>
+        <Labels:Pipe Width="164" StatusComponent="292-01-MA1" PipeHeight="Medium" Canvas.Left="163" Canvas.Top="169" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -56,20 +52,11 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="162" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="370-01-MA1" Height="6" Canvas.Left="678" Canvas.Top="264" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
+        <Labels:Pipe Width="162" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="370-01-MA1" Canvas.Left="678" Canvas.Top="265" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="553" StatusComponent="330-02-MA1" PipeHeight="Medium" Canvas.Left="837" Canvas.Top="742" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="107" StatusComponent="292-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="142" Canvas.Top="85" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" />
-        <Labels:Pipe Width="100" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="435" Canvas.Top="658" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:Pipe Width="594" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="234" Canvas.Top="366" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
+        <Labels:Pipe Width="107" StatusComponent="292-01-MA1" PipeHeight="Medium" Canvas.Left="142" Canvas.Top="91" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="279-21-CV1" VisibilitySignal="LS1" />
+        <Labels:Pipe Width="100" StatusComponent="322-01-MA1" PipeHeight="Medium" Canvas.Left="435" Canvas.Top="664" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:Pipe Width="594" StatusComponent="322-01-MA1" PipeHeight="Medium" Canvas.Left="234" Canvas.Top="372" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -79,8 +66,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="529" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="526" Canvas.Top="72" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="72" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="22" RenderTransformOrigin="0.5,0.5" Canvas.Left="1015" Canvas.Top="103" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Width="529" StatusComponent="322-01-MA1" PipeHeight="Medium" Canvas.Left="526" Canvas.Top="78" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="72" StatusComponent="322-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="1015" Canvas.Top="109" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -90,7 +77,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="402" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="18" VisibilityComponent="" VisibilitySignal="" Canvas.Left="652" Canvas.Top="341" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="DirectionOne">
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="402" StatusComponent="324-01-MA1" PipeHeight="Medium" VisibilityComponent="" VisibilitySignal="" Canvas.Left="652" Canvas.Top="344" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="DirectionOne">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -110,8 +97,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="141" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="21" Canvas.Left="1115" Canvas.Top="143" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="" VisibilitySignal="" Direction="DirectionTwo"/>
-        <Labels:Pipe Width="282" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="22" Canvas.Left="1110" Canvas.Top="283" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="" VisibilitySignal="" Direction="DirectionTwo">
+        <Labels:Pipe Width="141" StatusComponent="324-01-MA1" PipeHeight="Medium" Canvas.Left="1115" Canvas.Top="148" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="" VisibilitySignal="" Direction="DirectionTwo"/>
+        <Labels:Pipe Width="282" StatusComponent="324-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  Canvas.Left="1110" Canvas.Top="286" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="" VisibilitySignal="" Direction="DirectionTwo">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -122,17 +109,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="80" StatusComponent="332-02-MA1" PipeHeight="Medium" Canvas.Left="1238" Canvas.Top="618" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="283" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="370-01-MA1" Height="6" Canvas.Left="866" Canvas.Top="264" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Labels:Pipe Width="64" StatusComponent="322-01-MA1" PipeHeight="Medium" Height="22" Canvas.Left="408" Canvas.Top="631" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" >
+        <Labels:Pipe Width="283" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="370-01-MA1" Canvas.Left="866" Canvas.Top="265" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="64" StatusComponent="322-01-MA1" PipeHeight="Medium" Canvas.Left="408" Canvas.Top="637" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -147,46 +125,19 @@
         <Rectangle Height="102" Stroke="White" StrokeThickness="2" Width="118" RadiusX="15" RadiusY="15" Canvas.Left="949" Canvas.Top="520" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:V01_STR_BatchReactor Canvas.Left="728" Canvas.Top="487" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="330-41-LT1" TrendName="LEVEL" Height="300" Width="137" Color="WetMaterial" />
         <Machines:V01_STR_BatchReactor Canvas.Left="1129" Canvas.Top="363" TrendName="LEVEL" ComponentName="332-41-LT1" Height="300" Width="137" HorizontalAlignment="Left" VerticalAlignment="Center" Color="WetMaterial" />
-        <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="226" Height="18" Canvas.Left="938" Canvas.Top="143" HorizontalAlignment="Left" VerticalAlignment="Center" >
-            <Machines:SCW_ScrewConveyor_straight.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:SCW_ScrewConveyor_straight.RenderTransform>
-        </Machines:SCW_ScrewConveyor_straight>
+        <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="226" Height="18" Canvas.Left="938" Canvas.Top="143" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Machines:V01_SCW_Screw_wHopper Canvas.Left="270" Canvas.Top="565" Width="190" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" Height="185"/>
+        <Labels:JumpLabel JumpFromLabel="330-WASHING" JumpToLabel="354-HEAT" Canvas.Left="612" Canvas.Top="232" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel JumpFromLabel="330-WASHING" JumpToLabel="350-01-MA1" Canvas.Left="1381" Canvas.Top="703" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="320-41-LT1" JumpToLabel="292-01-MA1" Canvas.Left="93" Canvas.Top="61" />
         <Labels:DetailsLabel ComponentName="330-VIEW" DetailsPageName="D330" Canvas.Left="771" Canvas.Top="701" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="332-VIEW" DetailsPageName="D332" Canvas.Left="1172" Canvas.Top="577" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel 
-            JumpFromLabel="330-WASHING" 
-            JumpToLabel="354-HEAT" Canvas.Left="612" Canvas.Top="232" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel 
-            JumpFromLabel="330-WASHING" 
-            JumpToLabel="350-01-MA1" Canvas.Left="1381" Canvas.Top="703" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            JumpFromLabel="320-41-LT1" 
-            JumpToLabel="292-01-MA1" Canvas.Left="93" Canvas.Top="61" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Top" 
-            ComponentName="322-01-MA1" Canvas.Left="170" Canvas.Top="670" />
-        <Labels:DeviceLabel 
-            ComponentName="330-WASHING" Canvas.Left="963" Canvas.Top="546" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="330-MIXER" Canvas.Left="752" Canvas.Top="623" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-            ComponentName="324-01-MA1" Canvas.Left="1074" Canvas.Top="85" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-            ComponentName="332-MIXER" Canvas.Left="1153" Canvas.Top="499" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="320-41-LT1" Canvas.Left="323" Canvas.Top="94"/>
-        <Labels:DeviceLabel 
-      ComponentName="320-01-MA1" Canvas.Left="255" Canvas.Top="194" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-
-
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="322-01-MA1" Canvas.Left="170" Canvas.Top="670" />
+        <Labels:DeviceLabel ComponentName="330-WASHING" Canvas.Left="963" Canvas.Top="546" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="330-MIXER" Canvas.Left="752" Canvas.Top="623" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="324-01-MA1" Canvas.Left="1074" Canvas.Top="85" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="332-MIXER" Canvas.Left="1153" Canvas.Top="499" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="320-41-LT1" Canvas.Left="323" Canvas.Top="94"/>
+        <Labels:DeviceLabel ComponentName="320-01-MA1" Canvas.Left="255" Canvas.Top="194" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
