--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Details/D332.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Details/D332.xaml
@@ -4,15 +4,15 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
-						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
+			 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" xmlns:Stirrer="clr-namespace:Prevu.Drawings.Machines.Stirrer;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D332" 
+             x:Class="Prevu.Synoptics.D332" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="550" Width="620">
         <Labels:Pipe Width="68" StatusComponent="332-02-MA1" PipeHeight="Medium" Canvas.Left="515" Canvas.Top="403" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="114" RenderTransformOrigin="0.497,0.467" Color="Chemicals" StatusComponent="371-22-CV2" Canvas.Left="100" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="188" StatusComponent="324-01-MA1" PipeHeight="Medium" Height="18" VisibilityComponent="" VisibilitySignal="" Canvas.Left="227" Canvas.Top="128" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="DirectionTwo">
+        <Labels:Pipe Width="114" Color="Chemicals" StatusComponent="371-22-CV2" Canvas.Left="100" Canvas.Top="255" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="188" StatusComponent="324-01-MA1" PipeHeight="Medium" VisibilityComponent="" VisibilitySignal="" Canvas.Left="227" Canvas.Top="131" HorizontalAlignment="Center" VerticalAlignment="Top" Direction="DirectionTwo">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -70,20 +70,13 @@
         <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="195" Canvas.Top="41" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="30" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="579" Canvas.Top="392" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Rectangle Height="6" Stroke="Black" Width="30" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="306" Canvas.Top="41" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="332-01-MA1" Canvas.Left="218" Canvas.Top="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="332-42-TT1" RenderTransformOrigin="0.478,0.56" Canvas.Left="218" Canvas.Top="361" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-            ComponentName="332-41-LT1" Canvas.Left="218" Canvas.Top="289" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-            ComponentName="371-22-CV2" Canvas.Left="36" Canvas.Top="177" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="332-02-MA1" Canvas.Left="466" Canvas.Top="326" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="332-23-CV1" Canvas.Left="350" Canvas.Top="326" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="332-21-CV1" Canvas.Left="92" Canvas.Top="86" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="332-01-MA1" Canvas.Left="218" Canvas.Top="150" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="332-42-TT1" RenderTransformOrigin="0.478,0.56" Canvas.Left="218" Canvas.Top="361" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="332-41-LT1" Canvas.Left="218" Canvas.Top="289" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="371-22-CV2" Canvas.Left="36" Canvas.Top="177" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="332-02-MA1" Canvas.Left="466" Canvas.Top="326" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="332-23-CV1" Canvas.Left="350" Canvas.Top="326" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="332-21-CV1" Canvas.Left="92" Canvas.Top="86" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
     </Canvas>
 </UserControl>
