--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Details/D354.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Details/D354.xaml
@@ -4,11 +4,10 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
-						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
+			 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D354" 
+             x:Class="Prevu.Synoptics.D354" 
              mc:Ignorable="d" 
-             
              d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="350" Width="359">
         <Labels:Pipe Width="277" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" HorizontalAlignment="Left" Canvas.Left="52" Canvas.Top="170" VerticalAlignment="Center">
@@ -21,26 +20,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Vapor" Width="86" StatusComponent="354-21-CV1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Canvas.Left="89" Canvas.Top="180" VerticalAlignment="Center">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
-        <Rectangle Height="2" Stroke="Black" Width="63" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Canvas.Left="189" Canvas.Top="110" VerticalAlignment="Center">
-            <d:Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform ScaleX="-1" ScaleY="-1"/>
-                    <SkewTransform/>
-                    <RotateTransform/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </d:Rectangle.RenderTransform>
-        </Rectangle>
+        <Labels:Pipe Color="Vapor" Width="86" StatusComponent="354-21-CV1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Canvas.Left="89" Canvas.Top="180" VerticalAlignment="Center"/>
+        <Rectangle Height="2" Stroke="Black" Width="63" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Canvas.Left="189" Canvas.Top="110" VerticalAlignment="Center"/>
         <Rectangle Height="2" Stroke="Black" Width="54" HorizontalAlignment="Left" Canvas.Left="197" Canvas.Top="254" VerticalAlignment="Center"/>
         <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" HorizontalAlignment="Left" Canvas.Left="183" Canvas.Top="248" VerticalAlignment="Center"/>
         <Ellipse Height="16" Stroke="#FFBDBDBD" Width="16" OpacityMask="#FFBDBDBD" Fill="{DynamicResource {x:Static SystemColors.AppWorkspaceBrushKey}}" HorizontalAlignment="Left" Canvas.Left="183" Canvas.Top="104" VerticalAlignment="Center"/>
@@ -64,33 +45,11 @@
                 </TransformGroup>
             </Machines:EXC_HeatExchanger.RenderTransform>
         </Machines:EXC_HeatExchanger>
-        <Rectangle Height="46" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="188" Canvas.Top="285" HorizontalAlignment="Left" VerticalAlignment="Center">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
-        <Rectangle Height="46" Stroke="Black" Width="6" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" Canvas.Left="187" Canvas.Top="13" VerticalAlignment="Center">
-            <Rectangle.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Rectangle.RenderTransform>
-        </Rectangle>
-        <Labels:DeviceLabel 
-            ComponentName="354-21-CV1" HorizontalAlignment="Left" Canvas.Left="35" Canvas.Top="110" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="354-41-TT1" HorizontalAlignment="Left" Canvas.Left="221" Canvas.Top="86" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="354-42-PT2" HorizontalAlignment="Left" Canvas.Left="221" Canvas.Top="230" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-            ComponentName="354-42-PT1" HorizontalAlignment="Left" Canvas.Left="34" Canvas.Top="230" VerticalAlignment="Center"/>
+        <Rectangle Height="6" Stroke="Black" Width="44" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" Canvas.Left="168" Canvas.Top="306" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Rectangle Height="6" Stroke="Black" Width="46" Fill="#FFBDBDBD" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" Canvas.Left="167" Canvas.Top="33" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="354-21-CV1" HorizontalAlignment="Left" Canvas.Left="35" Canvas.Top="110" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="354-41-TT1" HorizontalAlignment="Left" Canvas.Left="221" Canvas.Top="86" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="354-42-PT2" HorizontalAlignment="Left" Canvas.Left="221" Canvas.Top="230" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="354-42-PT1" HorizontalAlignment="Left" Canvas.Left="34" Canvas.Top="230" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
