--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Details/D446.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Details/D446.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
-						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
+			 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}">
@@ -12,8 +12,6 @@
         <Machines:V01_BBF_SingleBag Canvas.Left="10" Canvas.Top="10" Height="320" Width="343" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="446-62-BAG" SignalName="LSH" Canvas.Left="146" Canvas.Top="72"/>
         <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="446-62-BAG" SignalName="SEL" Canvas.Left="148" Canvas.Top="214"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-		VerticalAlignment="Top" 
-		ComponentName="446-62-BAG" Canvas.Left="136" Canvas.Top="154"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="446-62-BAG" Canvas.Left="136" Canvas.Top="154"/>
     </Canvas>
 </UserControl>
