--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Details/D883_2.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Details/D883_2.xaml
@@ -4,16 +4,14 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
-						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
+			 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
              mc:Ignorable="d" 
-             d:Background="{DynamicResource MaterialDesignPaper}" d:DesignWidth="406.579">
-  <Canvas Height="344" Width="368">
-    <Machines:BBF_BigBagFilling Height="320" VerticalAlignment="Center" HorizontalAlignment="Center" Width="343" Canvas.Left="10" Canvas.Top="10" />
-    <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="883-62-BAG" SignalName="LSH" Canvas.Left="136" Canvas.Top="73"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" 
-		VerticalAlignment="Top" 
-		ComponentName="883-62-BAG" Canvas.Left="136" Canvas.Top="154"/>
-    <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="883-62-BAG" SignalName="SEL" Canvas.Left="136" Canvas.Top="234"/>
-  </Canvas>
+             d:Background="{DynamicResource MaterialDesignPaper}" >
+    <Canvas Height="344" Width="368">
+        <Machines:V01_BBF_SingleBag Canvas.Left="10" Canvas.Top="10" Height="320" Width="343" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="883-62-BAG" SignalName="LSH" Canvas.Left="136" Canvas.Top="73"/>
+        <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="883-62-BAG" SignalName="SEL" Canvas.Left="136" Canvas.Top="234"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="883-62-BAG" Canvas.Left="136" Canvas.Top="154"/>
+    </Canvas>
 </UserControl>
