--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Details/D887.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Details/D887.xaml
@@ -4,9 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Prevu.Synoptics"
-						 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
+			 xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             xmlns:Separation="clr-namespace:Prevu.Drawings.Machines.Separation;assembly=Prevu.Drawings" xmlns:Screws="clr-namespace:Prevu.Drawings.Machines.Screws;assembly=Prevu.Drawings" x:Class="Prevu.Synoptics.D887" 
+             x:Class="Prevu.Synoptics.D887" 
              mc:Ignorable="d" 
              Height="448" Width="498" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="448" Width="498">
@@ -22,8 +22,6 @@
         </Machines:V01_SCW_DETAIL_Flex_Verticale_DX>
         <Labels:SignalLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="887-61-LEV" SignalName="LSH" FlowDirection="LeftToRight" Canvas.Left="59" Canvas.Top="181"/>
         <Labels:SignalLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="887-61-LEV" SignalName="LSLA" FlowDirection="LeftToRight" Canvas.Left="122" Canvas.Top="257" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-         VerticalAlignment="Top" 
-         ComponentName="887-61-LEV" Canvas.Left="59" Canvas.Top="90"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="887-61-LEV" Canvas.Left="59" Canvas.Top="90"/>
     </Canvas>
 </UserControl>
