--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P020.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P020.xaml
@@ -5,8 +5,6 @@
              xmlns:local="clr-namespace:Prevu.Synoptics"
              xmlns:Machines="clr-namespace:Prevu.Drawings.Machines;assembly=Prevu.Drawings" 
              xmlns:Labels="clr-namespace:Prevu.UIComponents.Labels;assembly=Prevu.UIComponents" 
-             xmlns:DCE="clr-namespace:Prevu.Drawings.Machines.DCE;assembly=Prevu.Drawings" 
-             xmlns:VibratingScreens="clr-namespace:Prevu.Drawings.Machines.VibratingScreens;assembly=Prevu.Drawings" xmlns:Blowers="clr-namespace:Prevu.Drawings.Machines.Blowers;assembly=Prevu.Drawings" 
              x:Class="Prevu.Synoptics.P020" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
@@ -24,7 +22,7 @@
         <Labels:Pipe Width="66" StatusComponent="032-01-MA1" PipeHeight="Medium" Canvas.Left="1380" Canvas.Top="575" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="68" StatusComponent="030-01-MA1" PipeHeight="Medium" Canvas.Left="952" Canvas.Top="372" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="60" StatusComponent="020-23-CV1" PipeHeight="Medium" Canvas.Left="385" Canvas.Top="538"/>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="218" StatusComponent="018-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="201" Canvas.Top="383">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="218" StatusComponent="018-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="201" Canvas.Top="383">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -215,42 +213,23 @@
         <Machines:NT_ConveyorBelt Height="1" Width="134" Canvas.Left="996" Canvas.Top="431" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:NT_ConveyorBelt Height="3" Width="155" Canvas.Left="555" Canvas.Top="82" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:Waste Height="46" Width="44" Canvas.Left="655" Canvas.Top="118" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="018-01-MA1" Canvas.Left="265" Canvas.Top="213"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Top" 
-            ComponentName="020-41-LT1" Canvas.Left="160" Canvas.Top="423"/>
+        <Machines:Manual_selection Height="78" Width="42" Canvas.Left="1042" Canvas.Top="349" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="032-01-MA1" JumpToLabel="050-01-MA1" Canvas.Left="1403" Canvas.Top="679"/>
+        <Labels:JumpLabel JumpFromLabel="032-01-MA1" JumpToLabel="180-01-MA1" Canvas.Left="1202" Canvas.Top="351" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="020-HYD" DetailsPageName="D020" Canvas.Left="401" Canvas.Top="598"/>
-        <Labels:DeviceLabel 
-            ComponentName="020-DEBALER" Canvas.Left="264" Canvas.Top="663" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DeviceLabel 
-            ComponentName="032-01-MA1" Canvas.Left="1188" Canvas.Top="647" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-            ComponentName="032-41-LT1" Canvas.Left="1174" Canvas.Top="511" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel ComponentName="018-LUB" DetailsPageName="D018" Canvas.Left="152" Canvas.Top="148" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:DetailsLabel ComponentName="032-LUB" DetailsPageName="D032" Canvas.Left="1334" Canvas.Top="497" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-      ComponentName="021-01-MA1" Canvas.Left="504" Canvas.Top="205" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-      ComponentName="022-01-MA1" Canvas.Left="652" Canvas.Top="264" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-      ComponentName="031-01-MA1" Canvas.Left="1018" Canvas.Top="459" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:DeviceLabel 
-            ComponentName="030-01-MA1" Canvas.Left="834" Canvas.Top="351" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-      ComponentName="025-01-MA1" Canvas.Left="588" Canvas.Top="24" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            JumpFromLabel="032-01-MA1" 
-            JumpToLabel="050-01-MA1" Canvas.Left="1403" Canvas.Top="679"/>
-        <Labels:JumpLabel 
-      JumpFromLabel="032-01-MA1" 
-      JumpToLabel="180-01-MA1" Canvas.Left="1202" Canvas.Top="351" HorizontalAlignment="Left" VerticalAlignment="Center" Direction="Left"/>
-        <Labels:DeviceLabel 
-          ComponentName="030-01-YA1" Canvas.Left="707" Canvas.Top="440" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:DeviceLabel 
-      ComponentName="020-01-YA1" Canvas.Left="464" Canvas.Top="598" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.511,0.55"/>
-        <Machines:Manual_selection Height="78" Width="42" Canvas.Left="1042" Canvas.Top="349" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="018-01-MA1" Canvas.Left="265" Canvas.Top="213"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Top" ComponentName="020-41-LT1" Canvas.Left="160" Canvas.Top="423"/>
+        <Labels:DeviceLabel ComponentName="020-DEBALER" Canvas.Left="264" Canvas.Top="663" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Labels:DeviceLabel ComponentName="032-01-MA1" Canvas.Left="1188" Canvas.Top="647" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="032-41-LT1" Canvas.Left="1174" Canvas.Top="511" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="021-01-MA1" Canvas.Left="504" Canvas.Top="205" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="022-01-MA1" Canvas.Left="652" Canvas.Top="264" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="031-01-MA1" Canvas.Left="1018" Canvas.Top="459" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="030-01-MA1" Canvas.Left="834" Canvas.Top="351" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="025-01-MA1" Canvas.Left="588" Canvas.Top="24" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel ComponentName="030-01-YA1" Canvas.Left="707" Canvas.Top="440" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="020-01-YA1" Canvas.Left="464" Canvas.Top="598" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.511,0.55"/>
     </Canvas>
 </UserControl>
